<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.cricketscore.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/score_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-medium"
        android:paddingBottom="16dp"
        android:text="Batting Score"
        android:textSize="32sp"
        android:textColor="#000000"/>

    <LinearLayout
        android:id="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/score_type"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/team_A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="Team A"
                android:textColor="@color/team_A_color"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/team_A_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:text="0"
                android:textColor="@color/team_A_color"
                android:textSize="54sp" />

            <Button
                android:id="@+id/add_1_run_team_A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:text="@string/add_1_run"
                android:textColor="#000000"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"/>

            <Button
                android:id="@+id/add_2_runs_team_A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:text="@string/add_2_runs"
                android:textColor="#000000"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"/>

            <Button
                android:id="@+id/add_3_runs_team_A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:text="@string/add_3_runs"
                android:textColor="#000000"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"/>

            <Button
                android:id="@+id/add_4_runs_team_A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:text="@string/add_4_runs"
                android:textColor="#000000"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"/>

            <Button
                android:id="@+id/add_6_runs_team_A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:text="@string/add_6_runs"
                android:textColor="#000000"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="Wickets"
                android:textColor="@color/team_A_color"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="32dp"/>
            <TextView
                android:id="@+id/team_A_wickets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:text="0"
                android:textColor="@color/team_A_color"
                android:textSize="54sp" />

            <Button
                android:id="@+id/add_1_wicket_team_A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:text="@string/add_1_wicket"
                android:textColor="#000000"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/team_B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="Team B"
                android:textColor="@color/team_B_color"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/team_B_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:text="0"
                android:textColor="@color/team_B_color"
                android:textSize="54sp" />

            <Button
                android:id="@+id/add_1_run_team_B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:text="@string/add_1_run"
                android:textColor="#000000"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"/>

            <Button
                android:id="@+id/add_2_runs_team_B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:text="@string/add_2_runs"
                android:textColor="#000000"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"/>

            <Button
                android:id="@+id/add_3_runs_team_B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:text="@string/add_3_runs"
                android:textColor="#000000"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"/>

            <Button
                android:id="@+id/add_4_runs_team_B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:text="@string/add_4_runs"
                android:textColor="#000000"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"/>

            <Button
                android:id="@+id/add_6_runs_team_B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:text="@string/add_6_runs"
                android:textColor="#000000"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="Wickets"
                android:textColor="@color/team_B_color"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="32dp"/>
            <TextView
                android:id="@+id/team_B_wickets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:text="0"
                android:textColor="@color/team_B_color"
                android:textSize="54sp" />
            <Button
                android:id="@+id/add_1_wicket_team_B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:text="@string/add_1_wicket"
                android:textColor="#000000"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/score"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:text="@string/reset"
        android:id="@+id/reset"/>
    </RelativeLayout>
</ScrollView>
